modified html,css and added functionality on script.js file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
       <div class="middle-line"></div>
-      <div class="door">wAY IN</div>
+      <div class="door">WAY IN</div>
 
       
-        <div class= "seat driver"><p>Driver</p></div>
+        <div class= "driver"><p>Driver</p></div>
         <div class="seat pass1"><p>Seat 1</p></div>
         <div class="seat pass2"><p>Seat 2</p></div>
         <div class="seat pass3"><p>Seat 3</p></div>
@@ -24,5 +24,6 @@
         <div class="seat pass9"><p>Seat 9</p></div>
       
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
